fixed visible scrollbar

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -107,9 +107,25 @@ h5 {
   overflow: auto;
 }
 
+#info-card-1::-webkit-scrollbar {
+  display: none;
+}
+
+.card-stacked::-webkit-scrollbar {
+  display: none;
+}
+
+.card.horizontal::-webkit-scrollbar {
+  display: none;
+}
+
 #header {
   padding: 0px 16px 24px 16px;
   max-width: 50%;
+}
+
+#header::-webkit-scrollbar {
+  display: none;
 }
 
 h2 {
